[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/BattleFieldTiles.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/TimeBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ItemBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Slime.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/BattleField.gd" type="Script" id=9]

[node name="BattleField" type="Node"]
script = ExtResource( 9 )

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="BattleFieldTiles" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, 80 )

[node name="TimeBar" parent="." instance=ExtResource( 2 )]
position = Vector2( 128, 40 )
elapsed_time_max = 10.0

[node name="ItemBoxes" type="Node2D" parent="."]
position = Vector2( 128, 116 )

[node name="ItemBox" parent="ItemBoxes" instance=ExtResource( 4 )]
position = Vector2( -20, 0 )

[node name="ItemBox2" parent="ItemBoxes" instance=ExtResource( 4 )]

[node name="ItemBox3" parent="ItemBoxes" instance=ExtResource( 4 )]
position = Vector2( 20, 0 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 100, 80 )

[node name="PlayerTilesTopLeft" type="Position2D" parent="."]
position = Vector2( 84, 64 )

[node name="EnemyTilesTopLeft" type="Position2D" parent="."]
position = Vector2( 140, 64 )

[node name="EnemyWrapper" type="Node2D" parent="."]

[node name="Slime" parent="EnemyWrapper" instance=ExtResource( 6 )]
position = Vector2( 172, 64 )
collision_mask = 2147483648

[editable path="BattleFieldTiles"]
